@@ -16,7 +16,9 @@ label{margin:5 5 5 0; padding: 5;}
 .y{background: #3f3;}
 .z{background: #ff3;}
 
-#div{margin: 10; background: #eee; width: 100%; float: center; border: 2 solid #3000;}
+#div{margin: 10 0; background: #eee; width: 300; float: center; border: 2 solid #000;
+	aspect-ratio: 4/2;
+}
 #div2{background: url(icon.png) no-repeat;}
 #container{background: #fff;}
 #container:hover{background: #ff6;}
